fix: set z-index to search-field

--- a/static/styles.css
+++ b/static/styles.css
@@ -320,7 +320,6 @@ input:-webkit-autofill:active {
         padding-right: 1rem;
         width: 100%;
         color: var(--color-text);
-        z-index: 1020;
 
         &:focus-visible {
             outline: none;
@@ -329,12 +328,14 @@ input:-webkit-autofill:active {
 }
 
 .search-field {
+    position: relative;
     display: flex;
     padding: 0.5rem;
     gap: 0.5rem;
     background-color: var(--color-background);
     border-radius: 32px;
     transition: background-color var(--animation-ms) ease-in-out;
+    z-index: 1020;
     &:focus-within {
         background-color: #282a2c;
     }
